# Coder

Coder/: main.py  pyproject.toml  requirements.txt
Coder/config/: auth.py
Coder/model/: users.py
Coder/routers/: chat_routes.py  user.py
Coder/utils/: memory.py  models.py
Coder/workflow/: graph.py  nodes.py  routing.py  schemas.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/pages/: Chat.jsx  Footer.jsx  LandingPage.jsx  Login.jsx  Navbar.jsx  Signup.jsx
